fixes thank you submission form layout issues

--- a/styles/thankYou/thankYou.scss
+++ b/styles/thankYou/thankYou.scss
@@ -33,7 +33,7 @@ body{
 
         span{
            @include desktop(){
-            margin-top: -9em;
+            margin-top: -3em;
            }
         }
     }
